[tool.poetry]
name = "repl_python3_robotics"
version = "0.1.0"
description = ""
authors = ["SeanMabli <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
ephem = "^4.1"
geocoder = "^1.38.1"
pygame = "^2.0.3"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
